# selecit

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  main.proto
agent/: Cargo.toml  agent.kdl  build.rs
agent/src/: config.rs  main.rs  path.rs  proto.rs
agent/src/modules/: env.rs  info.rs  mod.rs  version.rs
build-common/: Cargo.toml
build-common/src/: lib.rs
certs/: generate.ps1  localhost.ext
client-tui/: Cargo.toml  build.rs
client-tui/src/: args.rs  main.rs  proto.rs  tui.rs
common/src/: lib.rs  path.rs
proto/: client.proto  main.proto
server/: Cargo.toml  build.rs  server.kdl
server/src/: config.rs  main.rs  path.rs  query.rs
server/src/proto/: client.rs  excavator.rs  mod.rs
