[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "fs", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"
async-trait = "0.1"
knus = "3.3"

[build-dependencies]
build-common = { path = "../build-common" }