[package]
name = "client-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30"
tui-input = "0.15"

[build-dependencies]
build-common = { path = "../build-common" }