[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
knus = "3.3"
tokio = { version = "1.41", features = ["full"] }
prost = "0.14"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
hex = "0.4"
tokio-stream = "0.1"
lazy_static = "1.5"
futures = "0.3"
small_uid = "0.2.4"
nom = "8.0.0"

[build-dependencies]
build-common = { path = "../build-common" }